@@ -1,5 +1,5 @@
 /*
- * $Id: term_api.h,v 1.80.2.1 2009/08/02 23:38:51 sfeam Exp $
+ * $Id: term_api.h,v 1.80.2.2 2009/08/26 19:16:13 sfeam Exp $
  */
 
 /* GNUPLOT - term_api.h */
@@ -171,6 +171,7 @@ typedef struct t_image {
 #define TERM_CAN_DASH       256  /* terminal supports dashed lines  */
 #define TERM_ALPHA_CHANNEL  512  /* alpha channel transparency      */
 #define TERM_MONOCHROME    1024  /* term is running in mono mode    */
+#define TERM_LINEWIDTH     2048  /* support for set term linewidth  */
 
 /* The terminal interface structure --- heart of the terminal layer.
  *
